# easy-async-cl3

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: lib.rs
src/async_executor/: kernel_arg.rs  mod.rs  pipeline_task.rs  task_builder.rs
src/cl_types/: buffer_flags.rs  formater.rs  formatter.rs  macros.rs  memory_flags.rs  mod.rs  releaseable.rs
src/cl_types/cl_buffer/: mod.rs
src/cl_types/cl_command_queue/: command_queue_parameters.rs  mod.rs
src/cl_types/cl_context/: mod.rs
src/cl_types/cl_device/: device_type.rs  mod.rs  opencl_version.rs  svm_capabilities.rs
src/cl_types/cl_event/: mod.rs
src/cl_types/cl_image/: image_channel_data_type.rs  image_channel_order.rs  image_desc.rs  image_formats.rs  image_type.rs  mod.rs
src/cl_types/cl_kernel/: mod.rs
src/cl_types/cl_pipe/: mod.rs
src/cl_types/cl_platform/: macros.rs  mod.rs
src/cl_types/cl_program/: mod.rs  program_binary_type.rs  program_build_status.rs  program_parameters.rs
src/cl_types/cl_svm_buffer/: mod.rs
src/error/: api_error.rs  cl_command_queue.rs  cl_context.rs  cl_device.rs  cl_platform.rs  mod.rs  wrapper_error.rs
tests/: api_guide.rs  buffer_and_image_ops.rs  pipe_test.rs  pipeline_test.rs
tests/program1test/: add.cl
tests/program2testsvm/: add.cl
tests/program3imagetest/: fillimage.cl
